fix: Fix how db results from getCampaignRequests function are processed
