# backend/docs/tesfafund-openapi.yaml
@@ -1007,7 +1007,7 @@ paths:
         - bearerHttpAuth: []
   # Permissions differ by method
   /campaign-requests/{id}:
-    # NEXT 11
+    # DONE
     # (Role: Supervisor, Owner: No) => Full access
     # (Role: Recipient, Owner: Yes) => Full access
     # (Role: Anon | Recipient, Owner: No) => No access
@@ -1101,39 +1101,28 @@ paths:
                 $ref: "#/components/schemas/ProblemDetails"
       security:
         - bearerHttpAuth: []
-  # Permissions differ by method
-  /campaign-request/{id}/resolve:
     # NEXT 12
     # (Role: Supervisor, Owner: No) => Full access
     # (Role: Recipient, Owner: Yes) => No access
     # (Role: Anon | Recipient, Owner: No) => No access
-    post:
+    put:
       tags:
         - Campaign Requests
-      summary: Resolves a campaign request by approving or denying it.
+      summary: Updates a campaign request with new details.
       parameters:
         - name: id
           in: path
           required: true
-          description: The ID of the campaign request to resolve.
+          description: The ID of the campaign request to update.
           schema:
             type: string
             format: uuid
-        - name: resolutionType
-          in: query
-          required: true
-          description: The resolution type (approve or deny).
-          schema:
-            type: string
-            enum:
-              - approve
-              - deny
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              description: The updated campaign details (if applicable). An empty object may be sent if no update is needed.
+              description: The updated campaign details.
               oneOf:
                 - $ref: "#/components/schemas/GoalAdjustmentRequest"
                 - $ref: "#/components/schemas/StatusChangeRequest"
@@ -1142,12 +1131,12 @@ paths:
                     - $ref: "#/components/schemas/EndDateExtensionRequest"
                     - description: The updated post is stored in the newPost property.
       responses:
-        "201":
-          description: Campaign request resolved successfully.
+        "200":
+          description: Campaign request updated successfully.
           content:
             application/json:
               schema:
-                description: The updated campaign details (if applicable). An empty object may be sent if no update is needed.
+                description: The updated campaign details.
                 oneOf:
                   - $ref: "#/components/schemas/GoalAdjustmentRequest"
                   - $ref: "#/components/schemas/StatusChangeRequest"
@@ -1157,6 +1146,57 @@ paths:
                       - description: The updated post is stored in the newPost property.
         "400":
           description: Bad request - Invalid parameters or request body.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+        "404":
+          description: Campaign request not found.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+        "500":
+          description: Internal server error.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+      security:
+        - bearerHttpAuth: []
+
+  # Permissions differ by method
+  /campaign-requests/{id}/decision/{decision}:
+    # NEXT 12
+    # (Role: Supervisor, Owner: No) => Full access
+    # (Role: Recipient, Owner: Yes) => No access
+    # (Role: Anon | Recipient, Owner: No) => No access
+    put:
+      tags:
+        - Campaign Requests
+      summary: Updates the decision (approve/deny) of a campaign request.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The ID of the campaign request.
+          schema:
+            type: string
+            format: uuid
+        - name: decision
+          in: path
+          required: true
+          description: The decision (approve or deny) for the campaign request.
+          schema:
+            type: string
+            enum:
+              - Approve
+              - Deny
+      responses:
+        "200":
+          description: Campaign request decision updated successfully.
+        "400":
+          description: Bad request - Invalid parameters.
           content:
             application/json:
               schema:
@@ -1181,6 +1221,7 @@ paths:
                 $ref: "#/components/schemas/ProblemDetails"
       security:
         - bearerHttpAuth: []
+
   # Permissions differ by method
   /notifications:
     # NEXT 14
